2000-07-13  Dan Winship  <danw@helixcode.com>

	* message-list.c (message_list_destroy): Only unref the folder if
	it's been set.

	* folder-browser.c (folder_browser_destroy): Only sync the folder
	if it's been set.

2000-07-13  Jonathan Blandford  <jrb@redhat.com>

	* mail-config.c (create_transport):
	s/CAMEL_SERVICE_NEED_HOST/CAMEL_SERVICE_URL_NEED_HOST.

2000-07-13  Dan Winship  <danw@helixcode.com>

	* mail-config.c (add_row): Add a "gboolean required" argument, and
	set its value on the entry.
	(create_source, create_transport): Create rows for URL elements if
	the URL ALLOWs them. Mark them required if it NEEDs them.
	(service_note_doneness): Only require the required fields to be
	filled in.

	Now the IMAP config page allows the user to enter a path, but
	doesn't require it.
	
2000-07-13  Jeffrey Stedfast  <fejj@helixcode.com>

	* mail-ops.c (real_fetch_mail): Back to the old way to avoid
	g_warnings, yay. Also fix append to send a flags argument (0)

2000-07-12  Chris Toshok  <toshok@helixcode.com>

	* mail-config.c (providers_config_new): fix some cut & paste bung.

2000-07-12  Chris Toshok  <toshok@helixcode.com>
	
	* mail-format.c (setup_function_table): add "message/news" to the
	mime_function_table using the same handler as message/rfc822.

2000-07-12  Chris Toshok  <toshok@helixcode.com>

	* mail-config.glade*: add news server tab to dialog.

	* mail-config.c (on_NewsServerConfigDialogButton_clicked): new function.
	(on_clistNewsServers_select_row): new function.
	(on_cmdNewsServersAdd_clicked): new function.
	(on_cmdNewsServersEdit_clicked): new function.
	(on_cmdNewsServersDelete_clicked): new function.
	(providers_config_new): mirror the source tab's code to fill in
	the news server tab.
	(write_config): save out the news server.
	(create_news_server_config_dialog): new function.
	(create_news_server_page): new function.

2000-07-12  Peter Williams  <peterw@helixcode.com>

	* mail-display.c (save_data): Change from evolution_dir to